# python-crud-fastapi

./: .dockerignore  .env.sample  .gitignore  Dockerfile  app.py  docker-compose.yaml  pyproject.toml  requirements.txt
app/: server.py
app/config/: environment.py
app/controllers/: ProductController.py
app/controllers/aws/: AWSListFilesController.py
app/controllers/products/: ProductDeleteController.py  ProductFindByIdController.py  ProductGetAllController.py  ProductStoreController.py  ProductUpdateController.py  __init__.py
app/injection_dependencies/: AWSInjectionImpl.py  ProductInjectionImpl.py
app/routes/: AWSRoutes.py  HealthCheck.py  ProductRoutes.py
config/: database.py
context/aws/application/: AWSListFilesUseCase.py
context/products/application/: ProductDeleteUseCase.py  ProductFindByIdUseCase.py  ProductGetAllUseCase.py  ProductStoreUseCase.py  ProductUpdateUseCase.py
domain/application/: ProductDeleteUseCase.py  ProductGetAllUseCase.py  ProductStoreUseCase.py  ProductUpdateUseCase.py  UseCases.py  __init__.py
domain/infrastructure/repositories/: ProductRepository.py
domain/infrastructure/schemas/: ProductSchema.py
domain/infrastructure/shared/: Logging.py
models/: ProductModel.py
notebook/: aws.ipynb
routes/: ProductRoutes.py
schemas/: ProductSchema.py
shared/: Errors.py
shared/infrastructure/middleware/: LogMiddleware.py  MetricsMiddleware.py  __init__.py
shared/infrastructure/observability/: logger.py
shared/models/: BaseController.py  BaseRepository.py  BaseUseCase.py
(+19 files in other folders)
